# TalkMateAI

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml
.husky/: pre-commit
apps/client/: .prettierrc  package.json
apps/client/src/app/: layout.tsx  page.tsx
apps/client/src/components/: CameraStream.tsx  TalkingHead.tsx  VoiceActivityDetector.tsx
apps/client/src/contexts/: WebSocketContext.tsx
apps/server/: .gitignore  main.py  package.json  pyproject.toml
