[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "server"
version = "0.1.0"
description = "TalkMateAI server application"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "uvicorn[standard]>=0.34.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
